Fix for nullable top-level schemas